# C_Template

./: CMakeLists.txt
src/: main.c
test/: CMakeLists.txt  test_main.c
vscode/: tasks.json
